# python-monasca-events

./: .gitignore  README.md  cli_test.py  requirements.txt  setup.cfg
monasca_events/: __init__.py  client.py  events_shell.py  exc.py  ksclient.py  shell.py
monasca_events/common/: http.py  monasca_manager.py  utils.py
monasca_events/openstack/common/: gettextutils.py  jsonutils.py  strutils.py
monasca_events/openstack/common/apiclient/: __init__.py  base.py
monasca_events/v2_0/: __init__.py  client.py  events.py  events_shell.py  shell.py
