[metadata]
name = python-monasca-events
summary = Monasca Events API Client Library
description-file = README.md
author = Hewlett-Packard 
home-page = https://github.com/hpcloud-mon/python-monasca-events
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages = monasca_events

[entry_points]
console_scripts =
    monasca-events = monasca_events.events_shell:main

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
